--- a/Stefanini.ViaReport.Core/Stefanini.ViaReport.Core.csproj
+++ b/Stefanini.ViaReport.Core/Stefanini.ViaReport.Core.csproj
@@ -1,7 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DebugType>None</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+    <Optimization>true</Optimization>
+    <Obfuscate>true</Obfuscate>
   </PropertyGroup>
 
   <ItemGroup>
