AHM-4 Alterado a máquina de windows para linux do codeql.

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -18,7 +18,7 @@ jobs:
   analyze:
 
     name: analyze
-    runs-on: windows-latest
+    runs-on: linux-latest
 
     strategy:
       fail-fast: false
