--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -27,7 +27,7 @@ jobs:
       run: dotnet restore
       
     - name: Generate coverage report
-      run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=lcov /p:Exclude="[xunit.*]*
+      run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=lcov
 
     - name: Publish coverage report to coveralls.io
       uses: coverallsapp/github-action@v1.0.1
