--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -13,9 +13,6 @@ jobs:
       matrix:
         dotnet-version: [ '6.0.x' ]
 
-    env:
-      TEST_PROJECT_PATH: Stefanini.ViaReport.Core.Tests
-
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET ${{ matrix.dotnet-version }}
@@ -33,4 +30,4 @@ jobs:
       uses: coverallsapp/github-action@v1.0.1
       with:
         github-token: ${{ secrets.GIT_TOKEN }}
-        path-to-lcov: ./${{ env:TEST_PROJECT_PATH }}/coverage.info 
+        path-to-lcov: ./Stefanini.ViaReport.Core.Tests/coverage.info 
