--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -28,6 +28,9 @@ jobs:
 
     - name: Publish coverage report to coveralls.io
       uses: coverallsapp/github-action@v1.0.1
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        COVERALLS_GIT_BRANCH: ${{ github.ref }}
       with:
         github-token: ${{ secrets.GIT_TOKEN }}
         path-to-lcov: ./Stefanini.ViaReport.Core.Tests/coverage.info 
