--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         dotnet-version: [ '6.0.x' ]
         file-lcov-path: [ './Stefanini.ViaReport.Core.Tests/coverage.info' ]
-        coveralls-service-name: 'Git Hub Action'
+        coveralls-service-name: [ 'Git Hub Action' ]
 
     steps:
     - uses: actions/checkout@v2
