--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -30,7 +30,10 @@ jobs:
 
     - name: Publish coverage report to coveralls.io
       run: |
+        dotnet new tool-manifest
+        
         dotnet tool install coveralls.net --tool-path tools
+        
         $coveralls = ".\tools\csmacnz.coveralls.exe"
         
-        & $coveralls --repoToken ${{ secrets.COVERALLS_REPO_TOKEN }} --commitBranch "${{ github.ref }}" --serviceName ${{ matrix.coveralls-service-name }} --lcov -i ${{ matrix.file-lcov-path }} --useRelativePaths --commitId ${{ github.sha }}
+        & $coveralls --repoToken ${{ secrets.COVERALLS_REPO_TOKEN }} --commitBranch "${{ github.ref }}" --serviceName "${{ matrix.coveralls-service-name }}" --lcov -i ${{ matrix.file-lcov-path }} --useRelativePaths --commitId ${{ github.sha }}
