AHM-10 Ajuste para rodar indicador de cobertura de código.

--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         dotnet new tool-manifest
         
-        dotnet tool install coveralls.net --tool-path tools
+        dotnet tool install --add-source https://ci.appveyor.com/nuget/coveralls-net-t37a9a9unhwk coveralls.net --tool-path tools
         
         $coveralls = ".\tools\csmacnz.coveralls.exe"
         
