--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: windows-latest
     strategy:
       matrix:
@@ -17,6 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
     - name: Setup .NET ${{ matrix.dotnet-version }}
       uses: actions/setup-dotnet@v1
       with:
@@ -29,4 +29,4 @@ jobs:
       run: dotnet build --no-restore --configuration ${{ matrix.build-configuration }}
 
     - name: Test
-      run: dotnet test --no-build --verbosity normal --configuration ${{ matrix.build-configuration }}
+      run: dotnet test --no-restore --no-build --verbosity normal --configuration ${{ matrix.build-configuration }}
