AHM-13 Alteração no coveralls para enviar a informação para branch certa.

--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -55,4 +55,4 @@ jobs:
         
         $coveralls = ".\tools\csmacnz.coveralls.exe"
         
-        & $coveralls --repoToken ${{ secrets.COVERALLS_REPO_TOKEN }} --commitBranch "${GITHUB_REF#refs/heads/}" --serviceName "${{ env.coveralls-service-name }}" --lcov -i ${{ env.path-lcov }}/${{ env.filename-lcov }} --useRelativePaths --commitId ${{ github.sha }}
+        & $coveralls --repoToken ${{ secrets.COVERALLS_REPO_TOKEN }} --commitBranch "${{ GITHUB_REF#refs/heads/ }}" --serviceName "${{ env.coveralls-service-name }}" --lcov -i ${{ env.path-lcov }}/${{ env.filename-lcov }} --useRelativePaths --commitId ${{ github.sha }}
