--- a/Stefanini.ViaReport.Updater/Stefanini.ViaReport.Updater.csproj
+++ b/Stefanini.ViaReport.Updater/Stefanini.ViaReport.Updater.csproj
@@ -9,6 +9,7 @@
     <StartupObject>Stefanini.ViaReport.Updater.App</StartupObject>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
+    <RuntimeIdentifiers>win-x86;win-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <PropertyGroup>
