--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -17,7 +17,7 @@ jobs:
         dotnet-version: [ '6.0.x' ]
 
     steps:
-    - name: Checkout
+    - name: Checkout Branch
       uses: actions/checkout@master
     
     - name: Setup .NET ${{ matrix.dotnet-version }}
@@ -25,16 +25,16 @@ jobs:
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
 
-    - name: Restore dependencies
+    - name: Restore Dependencies
       run: dotnet restore --nologo --verbosity=minimal --force
 
-    - name: Build
+    - name: Build Solution
       run: dotnet build --nologo --verbosity=minimal --no-restore
       
-    - name: Generate coverage report
+    - name: Generate Coverage Report
       run: dotnet test --nologo --verbosity=minimal --no-restore --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=lcov
 
-    - name: Merge coverage report projects
+    - name: Merge Coverage Report Projects
       run: |
         dotnet new tool-manifest
         dotnet tool install dotnet-reportgenerator-globaltool --tool-path tools
@@ -44,7 +44,7 @@ jobs:
         
         & $reportgenerator -reports:**/${{ env.filename-tmp-lcov }} -targetdir:${{ env.path-lcov }} -reporttypes:lcov
 
-    - name: Save coverage file
+    - name: Save Coverage File
       uses: actions/upload-artifact@master
       with:
         name: coverage-file
@@ -54,18 +54,20 @@ jobs:
     needs: build-test
     runs-on: windows-2019
     steps:
-    - name: Checkout
+    - name: Checkout Branch
       uses: actions/checkout@master
     
-    - name: Load coverage file
+    - name: Load Coverage File
       uses: actions/download-artifact@master
       with:
         name: coverage-file
         path: ${{ env.path-lcov }}
         
-    - name: Extract branch name
+    - name: Extract Branch Name
       shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      run: |
+        echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        echo "::set-output name=sha_short::$(git rev-parse HEAD)"
       id: extract_branch
     
     - name: Publish coverage report to coveralls.io
@@ -76,4 +78,4 @@ jobs:
         
         $coveralls = ".\tools\csmacnz.coveralls.exe"
         
-        & $coveralls --repoToken ${{ secrets.COVERALLS_REPO_TOKEN }} --commitBranch "${{ steps.extract_branch.outputs.branch }}" --serviceName "${{ env.coveralls-service-name }}" --lcov -i ${{ env.path-lcov }}/${{ env.filename-lcov }} --useRelativePaths --commitId ${{ github.sha }}
+        & $coveralls --repoToken ${{ secrets.COVERALLS_REPO_TOKEN }} --commitId ${{ steps.extract_branch.outputs.sha_short }} --commitBranch "${{ steps.extract_branch.outputs.branch }}" --serviceName "${{ env.coveralls-service-name }} In ${{ steps.extract_branch.outputs.branch }}" --lcov -i ${{ env.path-lcov }}/${{ env.filename-lcov }} --useRelativePaths
