--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,8 +1,6 @@
 name: .NET
 
 on:
-  push:
-    branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
 
@@ -15,7 +13,7 @@ jobs:
         build-configuration: [ 'Release' ]
 
     steps:
-    - name: Checkout
+    - name: Checkout Branch
       uses: actions/checkout@master
     
     - name: Setup .NET ${{ matrix.dotnet-version }}
@@ -23,11 +21,11 @@ jobs:
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
 
-    - name: Restore dependencies
+    - name: Restore Dependencies
       run: dotnet restore --nologo --verbosity=minimal --force
 
-    - name: Build
+    - name: Build Solution
       run: dotnet build --nologo --verbosity=minimal --no-restore --configuration ${{ matrix.build-configuration }}
 
-    - name: Test
+    - name: Test Solution
       run: dotnet test --nologo --verbosity=minimal --no-restore --no-build --configuration ${{ matrix.build-configuration }}
