--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -67,7 +67,7 @@ jobs:
       shell: bash
       run: |
         echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        echo "::set-output name=sha_short::$(git rev-parse HEAD)"
+        echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       id: extract_branch
     
     - name: Publish coverage report to coveralls.io
