AHM-17 Adicionado estrutura para gerenciar banco de dados.

--- a/Stefanini.ViaReport/appsettings.json
+++ b/Stefanini.ViaReport/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=storage.db"
+  },
   "jira": {
     "path": "https://jira.viavarejo.com.br",
     "eazybiAccount": "50",
