--- a/Stefanini.ViaReport.Data/Stefanini.ViaReport.Data.csproj
+++ b/Stefanini.ViaReport.Data/Stefanini.ViaReport.Data.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,9 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+    <ProjectReference Include="..\Stefanini.Core\Stefanini.Core.csproj" />
   </ItemGroup>
 
 </Project>
