--- a/Stefanini.ViaReport.DataStorage/Stefanini.ViaReport.DataStorage.csproj
+++ b/Stefanini.ViaReport.DataStorage/Stefanini.ViaReport.DataStorage.csproj
@@ -12,9 +12,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Stefanini.Core\Stefanini.Core.csproj" />
+    <ProjectReference Include="..\Stefanini.ViaReport.Data\Stefanini.ViaReport.Data.csproj" />
   </ItemGroup>
 
 </Project>
