--- a/Stefanini.ViaReport/Stefanini.ViaReport.csproj
+++ b/Stefanini.ViaReport/Stefanini.ViaReport.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Stefanini.Core\Stefanini.Core.csproj" />
     <ProjectReference Include="..\Stefanini.ViaReport.Core\Stefanini.ViaReport.Core.csproj" />
+    <ProjectReference Include="..\Stefanini.ViaReport.DataStorage\Stefanini.ViaReport.DataStorage.csproj" />
     <ProjectReference Include="..\Stefanini.ViaReport.Updater.Core\Stefanini.ViaReport.Updater.Core.csproj" />
   </ItemGroup>
 
