--- a/Stefanini.ViaReport.DataStorage/Stefanini.ViaReport.DataStorage.csproj
+++ b/Stefanini.ViaReport.DataStorage/Stefanini.ViaReport.DataStorage.csproj
@@ -13,13 +13,13 @@
 
   <ItemGroup>
     <PackageReference Include="MeControla.Core" Version="1.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.6" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.45.0" />
   </ItemGroup>
 
   <ItemGroup>
