--- a/Stefanini.Core.Tests/Stefanini.Core.Tests.csproj
+++ b/Stefanini.Core.Tests/Stefanini.Core.Tests.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Mocks\Dto\**" />
+    <EmbeddedResource Remove="Mocks\Dto\**" />
+    <None Remove="Mocks\Dto\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.msbuild" Version="3.1.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -30,10 +36,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Stefanini.Core\Stefanini.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Mocks\Dto\" />
   </ItemGroup>
 
 </Project>
